[package]
name = 'substrate-validator-set'
version = '3.0.0'
authors = ['Gautam Dhameja <quasijatt@outlook.com>']
edition = '2018'
license = 'Apache-2.0'
repository = 'https://github.com/gautamdhameja/substrate-validator-set'

[dev-dependencies.serde]
features = ['derive']
version = '1.0.126'

[dependencies.sp-core]
default-features = false
version = '3.0.0'

[dependencies.sp-io]
default-features = false
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
version = '3.0.0'

[dependencies.sp-std]
default-features = false
version = '3.0.0'

[dependencies.sp-staking]
default-features = false
version = '3.0.0'

[dependencies.log]
default-features = false
version = '0.4.14'

[dependencies.parity-scale-codec]
default-features = false
features = ['derive']
version = '2.3.1'

[dependencies.frame-benchmarking]
default-features = false
optional = true
version = '3.1.0'

[dependencies.frame-support]
default-features = false
version = '3.0.0'

[dependencies.frame-system]
default-features = false
version = '3.0.0'

[dependencies.pallet-session]
default-features = false
features = ['historical']
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'parity-scale-codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
    'pallet-session/std'
]
